# ooai-llm

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  changelog.md  conf.py  examples.md  factory.md  getting-started.md  index.md  make.bat  publishing.md  testing.md  usage.md
docs/_static/: custom.css
docs/api/: index.md
examples/: basic_usage.py  factory_usage.py  litellm_metadata_usage.py  live_provider_matrix.py  model_defaults_refresh.py  model_discovery.py  model_string_usage.py  reasoning_usage.py
src/ooai_llm/: __init__.py  cache.py  callbacks.py  catalog.py  cli.py  factory.py  messages.py  metadata.py  model_defaults.py  providers.py  reasoning.py  settings.py  types.py
tests/: conftest.py
tests/e2e/: test_live_providers.py  test_public_flows.py
tests/integration/: test_factory.py  test_metadata_factory.py
tests/unit/: test_cache.py  test_callbacks.py  test_catalog.py  test_cli.py  test_credentials.py  test_messages.py  test_metadata.py  test_model_defaults.py  test_model_info.py  test_model_string.py  test_providers.py  test_public_api.py  test_reasoning.py  test_settings.py
